--- a/internal/e2e/node_loader_no_preserve_symlinks/WORKSPACE
+++ b/internal/e2e/node_loader_no_preserve_symlinks/WORKSPACE
@@ -2,7 +2,10 @@ workspace(name = "node_loader_e2e_no_preserve_symlinks")
 
 http_archive(
     name = "bazel_skylib",
-    url = "https://github.com/bazelbuild/bazel-skylib/archive/0.3.1.zip",
+    urls = [
+        "http://mirrors.corp.logiocean.com/file-store/bazel-skylib/0.3.1.zip",
+        "https://github.com/bazelbuild/bazel-skylib/archive/0.3.1.zip",
+    ],
     strip_prefix = "bazel-skylib-0.3.1",
     sha256 = "95518adafc9a2b656667bbf517a952e54ce7f350779d0dd95133db4eb5c27fb1",
 )
