--- a/internal/rollup/package.json
+++ b/internal/rollup/package.json
@@ -5,6 +5,7 @@
         "minimist": "1.2.0",
         "rollup": "0.65.0",
         "rollup-plugin-node-resolve": "3.3.0",
+        "rollup-plugin-postcss": "^1.6.3",
         "rollup-plugin-sourcemaps": "^0.4.2",
         "source-map-explorer": "^1.5.0",
         "tmp": "0.0.33",
