--- a/packages/karma/WORKSPACE
+++ b/packages/karma/WORKSPACE
@@ -14,44 +14,44 @@
 
 workspace(name = "npm_bazel_karma")
 
-local_repository(
-    name = "build_bazel_rules_nodejs",
-    path = "../..",
-)
+#local_repository(
+    #name = "build_bazel_rules_nodejs",
+    #path = "../..",
+#)
 
-# Pull in build_bazel_rules_nodejs dev dependencies which are
-# needed for generating documentation
-load("@build_bazel_rules_nodejs//:package.bzl", "rules_nodejs_dev_dependencies")
+## Pull in build_bazel_rules_nodejs dev dependencies which are
+## needed for generating documentation
+#load("@build_bazel_rules_nodejs//:package.bzl", "rules_nodejs_dev_dependencies")
 
-rules_nodejs_dev_dependencies()
+#rules_nodejs_dev_dependencies()
 
-# Load rules_karma dependencies
-load("//:package.bzl", "rules_karma_dependencies")
+## Load rules_karma dependencies
+#load("//:package.bzl", "rules_karma_dependencies")
 
-rules_karma_dependencies()
+#rules_karma_dependencies()
 
-load("@build_bazel_rules_nodejs//:defs.bzl", "yarn_install")
+#load("@build_bazel_rules_nodejs//:defs.bzl", "yarn_install")
 
-yarn_install(
-    name = "npm",
-    package_json = "//:package.json",
-    yarn_lock = "//:yarn.lock",
-)
+#yarn_install(
+    #name = "npm",
+    #package_json = "//:package.json",
+    #yarn_lock = "//:yarn.lock",
+#)
 
-load("@npm//:install_bazel_dependencies.bzl", "install_bazel_dependencies")
+#load("@npm//:install_bazel_dependencies.bzl", "install_bazel_dependencies")
 
-install_bazel_dependencies()
+#install_bazel_dependencies()
 
-# Setup typescript toolchain
-load("@npm_bazel_typescript//:defs.bzl", "ts_setup_workspace")
+## Setup typescript toolchain
+#load("@npm_bazel_typescript//:defs.bzl", "ts_setup_workspace")
 
-ts_setup_workspace()
+#ts_setup_workspace()
 
-# Dependencies for generating documentation
-load("@io_bazel_rules_sass//sass:sass_repositories.bzl", "sass_repositories")
+## Dependencies for generating documentation
+#load("@io_bazel_rules_sass//sass:sass_repositories.bzl", "sass_repositories")
 
-sass_repositories()
+#sass_repositories()
 
-load("@io_bazel_skydoc//skylark:skylark.bzl", "skydoc_repositories")
+#load("@io_bazel_skydoc//skylark:skylark.bzl", "skydoc_repositories")
 
-skydoc_repositories()
+#skydoc_repositories()
