--- a/packages/typescript/WORKSPACE
+++ b/packages/typescript/WORKSPACE
@@ -1,68 +1,68 @@
 workspace(name = "npm_bazel_typescript")
 
-load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
+#load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
 
-local_repository(
-    name = "build_bazel_rules_nodejs",
-    path = "../..",
-)
+#local_repository(
+    #name = "build_bazel_rules_nodejs",
+    #path = "../..",
+#)
 
-# Pull in all build_bazel_rules_nodejs dev dependencies that are
-# needed for generating documentation
-load("@build_bazel_rules_nodejs//:package.bzl", "rules_nodejs_dev_dependencies")
+## Pull in all build_bazel_rules_nodejs dev dependencies that are
+## needed for generating documentation
+#load("@build_bazel_rules_nodejs//:package.bzl", "rules_nodejs_dev_dependencies")
 
-rules_nodejs_dev_dependencies()
+#rules_nodejs_dev_dependencies()
 
-# Uncomment for local development
-# local_repository(
-#     name = "build_bazel_rules_typescript",
-#     path = "../../../rules_typescript",
-# )
+## Uncomment for local development
+## local_repository(
+##     name = "build_bazel_rules_typescript",
+##     path = "../../../rules_typescript",
+## )
 
-# We use git_repository since Renovate knows how to update it.
-# With http_archive it only sees releases/download/*.tar.gz urls
-git_repository(
-    name = "build_bazel_rules_typescript",
-    commit = "0bd17912e8e0327d3529bf3309d97534f4b17688",
-    remote = "http://github.com/bazelbuild/rules_typescript.git",
-)
+## We use git_repository since Renovate knows how to update it.
+## With http_archive it only sees releases/download/*.tar.gz urls
+#git_repository(
+    #name = "build_bazel_rules_typescript",
+    #commit = "0bd17912e8e0327d3529bf3309d97534f4b17688",
+    #remote = "http://github.com/bazelbuild/rules_typescript.git",
+#)
 
-# We have a source dependency on build_bazel_rules_typescript
-# so we must repeat its transitive toolchain deps
-load("//:package.bzl", "rules_typescript_dev_dependencies")
+## We have a source dependency on build_bazel_rules_typescript
+## so we must repeat its transitive toolchain deps
+#load("//:package.bzl", "rules_typescript_dev_dependencies")
 
-rules_typescript_dev_dependencies()
+#rules_typescript_dev_dependencies()
 
-load("@build_bazel_rules_nodejs//:defs.bzl", "yarn_install")
+#load("@build_bazel_rules_nodejs//:defs.bzl", "yarn_install")
 
-yarn_install(
-    name = "npm",
-    package_json = "//:package.json",
-    yarn_lock = "//:yarn.lock",
-)
+#yarn_install(
+    #name = "npm",
+    #package_json = "//:package.json",
+    #yarn_lock = "//:yarn.lock",
+#)
 
-load("@io_bazel_rules_go//go:def.bzl", "go_register_toolchains", "go_rules_dependencies")
-load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
+#load("@io_bazel_rules_go//go:def.bzl", "go_register_toolchains", "go_rules_dependencies")
+#load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
 
-gazelle_dependencies()
+#gazelle_dependencies()
 
-go_rules_dependencies()
+#go_rules_dependencies()
 
-go_register_toolchains()
+#go_register_toolchains()
 
-load("@build_bazel_rules_typescript//internal:ts_repositories.bzl", "ts_setup_dev_workspace")
+#load("@build_bazel_rules_typescript//internal:ts_repositories.bzl", "ts_setup_dev_workspace")
 
-ts_setup_dev_workspace()
+#ts_setup_dev_workspace()
 
-load("//internal:ts_repositories.bzl", "ts_setup_workspace")
+#load("//internal:ts_repositories.bzl", "ts_setup_workspace")
 
-ts_setup_workspace()
+#ts_setup_workspace()
 
-# Dependencies for generating documentation
-load("@io_bazel_rules_sass//sass:sass_repositories.bzl", "sass_repositories")
+## Dependencies for generating documentation
+#load("@io_bazel_rules_sass//sass:sass_repositories.bzl", "sass_repositories")
 
-sass_repositories()
+#sass_repositories()
 
-load("@io_bazel_skydoc//skylark:skylark.bzl", "skydoc_repositories")
+#load("@io_bazel_skydoc//skylark:skylark.bzl", "skydoc_repositories")
 
-skydoc_repositories()
+#skydoc_repositories()
